# sphinx-need-sysml

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.rst  SKILL.md  noxfile.py  pyproject.toml
.github/actions/setup-plantuml/: action.yml
.github/workflows/: ci.yml  coverage.yaml  release.yaml  secret-scan.yaml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
02/a252e4ade8/: metadata.json
02/a252e4ade8/0/: content_hash.txt  full.jsonl  metadata.json
03/4f235efe1c/: metadata.json
03/4f235efe1c/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
03/4f235efe1c/1/: content_hash.txt  full.jsonl  metadata.json
09/56597f9e94/: metadata.json
09/56597f9e94/0/: content_hash.txt  metadata.json
0d/c5eff4fca3/: metadata.json
0d/c5eff4fca3/0/: content_hash.txt  metadata.json
13/60e5ff3b84/: metadata.json
13/60e5ff3b84/0/: content_hash.txt  metadata.json
13/d5669bb56e/: metadata.json
13/d5669bb56e/0/: content_hash.txt  full.jsonl  metadata.json
15/1fa8ad3a60/: metadata.json
15/1fa8ad3a60/0/: content_hash.txt  metadata.json  prompt.txt
1b/df20721741/: metadata.json
1b/df20721741/0/: content_hash.txt  metadata.json  prompt.txt
1b/df20721741/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
1b/df20721741/2/: content_hash.txt  metadata.json
1c/e74c0b7e4a/: metadata.json
1c/e74c0b7e4a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
1c/e74c0b7e4a/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
1f/27eb6bf9db/: metadata.json
1f/27eb6bf9db/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
20/f223aaa98d/: metadata.json
20/f223aaa98d/0/: content_hash.txt  metadata.json
20/f223aaa98d/1/: content_hash.txt  full.jsonl  metadata.json
2f/95d7001802/: metadata.json
2f/95d7001802/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
2f/95d7001802/1/: full.jsonl  metadata.json
30/48409cf14b/: metadata.json
30/48409cf14b/0/: content_hash.txt  full.jsonl  metadata.json
31/5a9d7ee057/: metadata.json
31/5a9d7ee057/0/: content_hash.txt  metadata.json  prompt.txt
31/5a9d7ee057/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
33/68fa77a7f8/: metadata.json
33/68fa77a7f8/0/: content_hash.txt  full.jsonl  metadata.json
51/31e47dd04f/: metadata.json
51/31e47dd04f/0/: content_hash.txt  metadata.json
5d/94002bfa43/: metadata.json
5d/94002bfa43/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5d/94002bfa43/1/: content_hash.txt  metadata.json  prompt.txt
63/1c3384651c/: metadata.json
63/1c3384651c/0/: content_hash.txt  metadata.json  prompt.txt
6a/5b8704574d/: metadata.json
6a/5b8704574d/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
6a/5b8704574d/1/: content_hash.txt  full.jsonl  metadata.json
6f/7ab87609f2/: metadata.json
6f/7ab87609f2/0/: content_hash.txt  metadata.json
70/a757ccfea4/: metadata.json
70/a757ccfea4/0/: content_hash.txt  full.jsonl  metadata.json
76/7fccffe683/: metadata.json
76/7fccffe683/0/: content_hash.txt  full.jsonl  metadata.json
7a/9a354cd217/: metadata.json
7a/9a354cd217/0/: content_hash.txt  metadata.json  prompt.txt
84/c4bc946b63/: metadata.json
84/c4bc946b63/0/: content_hash.txt  full.jsonl  metadata.json
86/fffc5c9010/: metadata.json
86/fffc5c9010/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
87/c33d180681/: metadata.json
87/c33d180681/0/: content_hash.txt  metadata.json  prompt.txt
87/c33d180681/1/: content_hash.txt  full.jsonl  metadata.json
88/bb77ded089/: metadata.json
88/bb77ded089/0/: content_hash.txt  metadata.json
91/46da4b6e2c/: metadata.json
91/46da4b6e2c/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
97/7f1146fa5e/: metadata.json
97/7f1146fa5e/0/: content_hash.txt  full.jsonl  metadata.json  (+1 more)
a3/02cfa9928e/: metadata.json
a3/52281d3e42/: metadata.json
a4/02f26af52d/: metadata.json
a7/a5f1a4b661/: metadata.json
b1/ea2d9da99a/: metadata.json
b2/a515bd94c4/: metadata.json
b6/36a52d9cd6/: metadata.json
b9/5df0692d75/: metadata.json
c2/bfe9422079/: metadata.json
c8/a10ba8bc26/: metadata.json
cd/e39ed627e8/: metadata.json
da/900b341582/: metadata.json
docs/: conf.py  index.rst  install.rst
docs/directives/: need_types.rst  needsysml_act.rst  needsysml_alloc.rst  needsysml_bdd.rst  needsysml_ibd.rst  needsysml_par.rst  needsysml_pkg.rst  needsysml_req.rst  needsysml_sd.rst  needsysml_stm.rst  needsysml_svg.rst  needsysml_uc.rst
docs/examples/: vehicle_system.rst
f4/571be575f3/: metadata.json
f8/756c158f03/: metadata.json
f9/91936e66e6/: metadata.json
specs/001-sysml-v2-needs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-full-sysml-diagrams/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-svg-helper-cleanup/: spec.md
specs/004-fix-package-uml-svg/: plan.md  spec.md
specs/005-fix-pkg-svg-dependency-lines/: plan.md  spec.md  tasks.md
specs/006-usecase-diagram-uml-svg/: data-model.md  plan.md  quickstart.md  research.md  spec.md
sphinx_need_sysml/: __init__.py  fields.py  templates.py  warnings.py
sphinx_need_sysml/directives/: __init__.py  needsysml_act.py  needsysml_alloc.py  needsysml_bdd.py  needsysml_ibd.py  needsysml_par.py  needsysml_pkg.py  needsysml_req.py  needsysml_sd.py  needsysml_stm.py  needsysml_svg.py  needsysml_uc.py
sphinxcontrib/sysml/: __init__.py  config.py  fields.py  flow_configs.py  svg_templates.py  templates.py  warnings.py
tests/: conftest.py  test_act_directive.py  test_alloc_directive.py  test_bdd_directive.py  test_fields.py  test_flow_configs.py  test_ibd_directive.py  test_need_types.py  test_par_directive.py  test_pkg_directive.py  test_req_directive.py  test_sd_directive.py  test_stm_directive.py  test_svg_directive.py  test_uc_directive.py
(+86 files in other folders)
